# custom-gpt

./: .gitignore  Cargo.toml  README.md  custom-gpt  custom.sh  log4rs.yaml  log4rs.yml  start  stop
src/: main.rs
src/chat/: mod.rs
src/model/: chat.rs  completions.rs  mod.rs
static/: index.html
static/css/: index.css
static/js/: main.js
