[package]
name = "custom-gpt"
version = "0.1.0"
edition = "2021"
author =  ["jon <zjon234@gmail.com>"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-openai = "0.10.3"
tokio = { version = "1.28.0", features = ["full"] }
axum ={version="0.6",features=["multipart"]}
serde = { version = "1.0.16", features = ["derive"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }




[dev-dependencies]
async-openai = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }



[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"